--- a/index.html
+++ b/index.html
@@ -159,6 +159,48 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div class="container marketing pt-5">
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading fw-normal lh-1">
+              First featurette heading.
+              <span class="text-muted">It’ll blow your mind.</span>
+            </h2>
+            <p class="lead">
+              Some great placeholder content for the first featurette here.
+              Imagine some exciting prose here.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <div
+              class="featurette-image border rounded-4 featurette-image-1 img-fluid mx-auto border border-1 w-100"
+            ></div>
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading fw-normal lh-1">
+              Oh yeah, it’s that good.
+              <span class="text-muted">See for yourself.</span>
+            </h2>
+            <p class="lead">
+              Another featurette? Of course. More placeholder content here to
+              give you an idea of how this layout would work with some actual
+              real-world content in place.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <div
+              class="featurette-image border rounded-4 featurette-image-2 img-fluid mx-auto border border-1 w-100"
+            ></div>
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+      </div>
     </main>
     <div class="container-fluid bg-pastel-yellow">
       <div class="container">
