--- a/store.html
+++ b/store.html
@@ -231,7 +231,7 @@
               />
               <button
                 type="button"
-                class="btn btn-primary shop-item-add-to-cart bg-pastel-red border-0 font-ambit text-dark fw-bold"
+                class="btn btn-primary shop-item-add-to-cart bg-pastel-pink border-0 font-ambit text-dark fw-bold"
                 data-bs-dismiss="modal"
               >
                 Lägg till i varukorg
