--- a/about.html
+++ b/about.html
@@ -84,8 +84,7 @@
                 <div class="cart nav-item">
                   <i class="bi bi-cart2"></i>
                   <div
-                    id="cart-amount"
-                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
+                    class="cart-amount cart-amount-div rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
                   >
                     0
                   </div>
@@ -97,7 +96,7 @@
       </nav>
     </header>
     <main>
-      <div class="container py-4">
+      <div class="container py-4 mb-5">
         <div class="mb-4">
           <div class="container-fluid map-container rounded-3">
             <iframe
@@ -113,7 +112,7 @@
 
         <div class="row align-items-md-stretch">
           <div class="col-md-6">
-            <div class="h-100 p-5 bg-pastel-red rounded-3">
+            <div class="h-100 p-5 bg-pastel-pink rounded-3">
               <h2 class="font-gt-alpina text-dark">Kontakta oss</h2>
               <div class="container px-0 text-black pt-3 font-ambit">
                 <form novalidate>
@@ -171,9 +170,35 @@
         </div>
       </div>
     </main>
-    <footer>
-      <!-- place footer here -->
-    </footer>
+    <div
+      class="container-fluid bg-pastel-red font-ambit-regular"
+      style="height: 300px"
+    >
+      <div class="container">
+        <footer class="py-5">
+          <ul class="nav justify-content-center pb-3 mb-3">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a href="store.html" class="nav-link px-2 text-muted"
+                >Produkter</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+            </li>
+            <li class="nav-item">
+              <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+            </li>
+          </ul>
+          <p class="text-center text-muted">© 2023 BagarBasse AB</p>
+        </footer>
+      </div>
+    </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
