--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <i class="bi bi-cart2"></i>
                   <div
                     id="cart-amount"
-                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
+                    class="cart-amount cart-amount-div rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
                   >
                     0
                   </div>
@@ -121,24 +121,9 @@
           ></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item carousel-item-1 active">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Title</h3>
-              <p>Description</p>
-            </div>
-          </div>
-          <div class="carousel-item carousel-item-2">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Title</h3>
-              <p>Description</p>
-            </div>
-          </div>
-          <div class="carousel-item carousel-item-3">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Title</h3>
-              <p>Description</p>
-            </div>
-          </div>
+          <div class="carousel-item carousel-item-1 active"></div>
+          <div class="carousel-item carousel-item-2"></div>
+          <div class="carousel-item carousel-item-3"></div>
         </div>
         <button
           class="carousel-control-prev"
@@ -162,11 +147,11 @@
       <div class="container marketing pt-5">
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">
+            <h2 class="featurette-heading fw-normal lh-1 font-gatefold-demi">
               First featurette heading.
               <span class="text-muted">It’ll blow your mind.</span>
             </h2>
-            <p class="lead">
+            <p class="lead font-ambit">
               Some great placeholder content for the first featurette here.
               Imagine some exciting prose here.
             </p>
@@ -182,11 +167,11 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading fw-normal lh-1">
+            <h2 class="featurette-heading fw-normal lh-1 font-gatefold-demi">
               Oh yeah, it’s that good.
               <span class="text-muted">See for yourself.</span>
             </h2>
-            <p class="lead">
+            <p class="lead font-ambit">
               Another featurette? Of course. More placeholder content here to
               give you an idea of how this layout would work with some actual
               real-world content in place.
@@ -202,120 +187,32 @@
         <hr class="featurette-divider" />
       </div>
     </main>
-    <div class="container-fluid bg-pastel-yellow">
+    <div
+      class="container-fluid bg-pastel-red font-ambit-regular"
+      style="height: 300px"
+    >
       <div class="container">
         <footer class="py-5">
-          <div class="row">
-            <div class="col-6 col-md-2 mb-3">
-              <h5>Section</h5>
-              <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Home</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Features</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Pricing</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">FAQs</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">About</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-6 col-md-2 mb-3">
-              <h5>Section</h5>
-              <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Home</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Features</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Pricing</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">FAQs</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">About</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-6 col-md-2 mb-3">
-              <h5>Section</h5>
-              <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Home</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Features</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">Pricing</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">FAQs</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-muted">About</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-md-5 offset-md-1 mb-3">
-              <form>
-                <h5>Subscribe to our newsletter</h5>
-                <p>Monthly digest of what's new and exciting from us.</p>
-                <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                  <label for="newsletter1" class="visually-hidden"
-                    >Email address</label
-                  >
-                  <input
-                    id="newsletter1"
-                    type="text"
-                    class="form-control"
-                    placeholder="Email address"
-                  />
-                  <button class="btn btn-primary" type="button">
-                    Subscribe
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-
-          <div
-            class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
-          >
-            <p>© 2022 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
-              <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><svg class="bi" width="24" height="24">
-                    <use xlink:href="#twitter"></use></svg
-                ></a>
-              </li>
-              <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><svg class="bi" width="24" height="24">
-                    <use xlink:href="#instagram"></use></svg
-                ></a>
-              </li>
-              <li class="ms-3">
-                <a class="link-dark" href="#"
-                  ><svg class="bi" width="24" height="24">
-                    <use xlink:href="#facebook"></use></svg
-                ></a>
-              </li>
-            </ul>
-          </div>
+          <ul class="nav justify-content-center pb-3 mb-3">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a href="store.html" class="nav-link px-2 text-muted"
+                >Produkter</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+            </li>
+            <li class="nav-item">
+              <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+            </li>
+          </ul>
+          <p class="text-center text-muted">© 2023 BagarBasse AB</p>
         </footer>
       </div>
     </div>
