--- a/recipes.html
+++ b/recipes.html
@@ -86,7 +86,7 @@
                   <i class="bi bi-cart2"></i>
                   <div
                     id="cart-amount"
-                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
+                    class="cart-amount cart-amount-div rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
                   >
                     0
                   </div>
@@ -343,9 +343,35 @@
         </div>
       </div>
     </main>
-    <footer>
-      <!-- place footer here -->
-    </footer>
+    <div
+    class="container-fluid bg-pastel-red font-ambit-regular"
+    style="height: 300px"
+  >
+    <div class="container">
+      <footer class="py-5">
+        <ul class="nav justify-content-center pb-3 mb-3">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+          </li>
+          <li class="nav-item">
+            <a href="store.html" class="nav-link px-2 text-muted"
+              >Produkter</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+          </li>
+          <li class="nav-item">
+            <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+          </li>
+          <li class="nav-item">
+            <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+          </li>
+        </ul>
+        <p class="text-center text-muted">© 2023 BagarBasse AB</p>
+      </footer>
+    </div>
+  </div>
     <template id="recipe-template"
       ><div class="col recipe-item">
         <div class="card border-0 h-100 align-items-top">
