--- a/store.html
+++ b/store.html
@@ -35,7 +35,7 @@
 
   <body id="store">
     <a href="store.html" class="text-decoration-none text-dark">
-      <div class="bg-pastel-red">
+      <div class="bg-pastel-yellow">
         <p class="text-center font-ambit-regular fw-semibold p-2">
           Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
         </p>
@@ -95,7 +95,7 @@
                   <i class="bi bi-cart2"></i>
                   <div
                     id="cart-amount"
-                    class="cart-amount rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
+                    class="cart-amount cart-amount-div rounded-circle d-flex justify-content-center align-items-center bg-pastel-red text-light top-0 end-0 fs-7 fw-semibold"
                   >
                     0
                   </div>
@@ -110,9 +110,37 @@
       <div class="container-fluid store-container p-0"></div>
       <div class="modals-container"></div>
     </main>
-
+    <div
+      class="container-fluid bg-pastel-yellow font-ambit-regular"
+      style="height: 300px"
+    >
+      <div class="container">
+        <footer class="py-5">
+          <ul class="nav justify-content-center pb-3 mb-3">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a href="store.html" class="nav-link px-2 text-muted"
+                >Produkter</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+            </li>
+            <li class="nav-item">
+              <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+            </li>
+          </ul>
+          <p class="text-center text-muted">© 2023 BagarBasse AB</p>
+        </footer>
+      </div>
+    </div>
     <template id="store-category-template">
-      <div class="container-fluid p-2">
+      <div class="container-fluid category-container p-2">
         <div class="container store-category my-5">
           <h1
             class="fs-1 font-gatefold-demi text-center pb-5 category-title"
@@ -143,24 +171,6 @@
           <div class="card-body d-flex flex-column">
             <h5 class="card-title store-item-title font-gt-alpina"></h5>
             <p class="card-text store-item-desc flex-grow-1 font-ambit"></p>
-            <!-- <div class="d-flex justify-content-end align-items-center h-20">
-              <div class="btn-group">
-                <button
-                  type="button"
-                  class="btn btn-sm btn-outline-secondary store-item-modal-button"
-                  data-bs-toggle="modal"
-                  data-bs-target="#modal-${item.id}"
-                >
-                  Mer info
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-primary btn-sm shop-item-add-to-cart"
-                >
-                  Lägg i varukorg
-                </button>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
@@ -231,7 +241,7 @@
               />
               <button
                 type="button"
-                class="btn btn-primary shop-item-add-to-cart bg-pastel-pink border-0 font-ambit text-dark fw-bold"
+                class="btn btn-primary shop-item-add-to-cart btn-pastel-yellow border-0 font-ambit text-dark fw-bold"
                 data-bs-dismiss="modal"
               >
                 Lägg till i varukorg
